# ChampBot

./: .gitignore  README.md  champsQuotes.json  config.py  explanation.txt  main.py  package-lock.json  pyproject.toml  requirements.txt  roles.txt
jsons/: summoner.json
